--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="style/style.css" type="text/css">
 </head>
 <body> 
-
+     <!-- Logo -->
+    <div class="logo-container">
+        <a href=""><img src="images/logo.png" alt="Logo" class="logo" height="120"></a>
+    </div>
+    <div id="content-wrapper">
+        <!-- Content -->
+        <div id="content">
+            <!-- Screens -->>
+            <div id="screen1" class="screen" style="text-align:center;">
+                <!-- Main -->
+                <h3>Welcome to The World Economic Forum Quiz</h3>
+                <h4>The Quiz Game to Explore the World Economic Forum's Impact and Initiatives</h4>
+                Join the challenge from anywhere and test your knowledge on how the WEF is shaping the future.
+                <br><br>
+                Use the buttons below to navigate through the quiz sections.
+                <br><br>
+                <button class="whiteBtn" onclick="showScreen(2)">How to play</button>   <br>
+                <button class="whiteBtn" onclick="showScreen(3)">Play</button>
+                <br><br>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
