Add "How to play" screen for quiz in index.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
                 <button class="whiteBtn" onclick="showScreen(3)">Play</button>
                 <br><br>
             </div>
+                
+            <div id="screen1" class="screen" style="text-align:center;">
+                <!-- Main -->
+                <h3>Welcome to The World Economic Forum Quiz</h3>
+                <h4>The Quiz Game to Explore the World Economic Forum's Impact and Initiatives</h4>
+                Join the challenge from anywhere and test your knowledge on how the WEF is shaping the future.
+                <br><br>
+                Use the buttons below to navigate through the quiz sections.
+                <br><br>
+                <button class="whiteBtn" onclick="showScreen(2)">How to play</button>   <br>
+                <button class="whiteBtn" onclick="showScreen(3)">Play</button>
+                <br><br>
+            </div>
+
         </div>
     </div>
 </body>
