Add quiz starter section with submit button in index.html

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                 <br><br>
             </div>
 
+            <div id="screen3" class="screen hidden" style="text-align:center;">
+                <!-- Quiz Starter -->
+                <button class="whiteBtn btnDark" onclick="startQuiz()">Submit</button>
+            </div>
+
         </div>
     </div>
 </body>
