--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Logo -->
     <div class="logo-container">
-        <a href=""><img src="images/logo.png" alt="Logo" class="logo" height="120"></a>
+        <a href=""><img src="/assets/images/logo.png" alt="Logo" class="logo" height="120"></a>
     </div>
     <div id="content-wrapper">
         <!-- Content -->
