--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
-    <link rel="stylesheet" href="style/style.css" type="text/css">
+    <link rel="stylesheet" href="assets/style/style.css" type="text/css">
 </head>
 
 <body>
     <!-- Logo -->
     <div class="logo-container">
-        <a href=""><img src="/assets/images/logo.png" alt="Logo" class="logo" height="120"></a>
+        <a href=""><img src="assets/images/logo.png" alt="Logo" class="logo" height="120"></a>
     </div>
     <div id="content-wrapper">
         <!-- Content -->
@@ -97,7 +97,7 @@
     </div>
 
     <!-- Include script.js file -->
-    <script src="js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 
 </body>
 </html>
