--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <!-- Quiz Starter -->
                 <h3>Welcome to The World Economic Forum Quiz</h3>
                 <h4>User Name :</h4>
-                <input type="text" name="name" id="name" placeholder="Enter your name" />
+                <input type="text" name="name" id="name" placeholder="Enter your name">
                 <br><br>
                 <button class="whiteBtn btnDark" onclick="startQuiz()">Submit</button>
             </div>
@@ -62,7 +62,7 @@
                 <!-- Timer Display -->
                 <div id="timerDisplay" style="font-size: 18px; color: red; font-weight: bold;">Time Left: 10:00</div>
 
-                <h3 id="questionText"></h3>
+                <h3 id="questionText">Question</h3>
                 <div id="optionsContainer"></div>
                 <br>
 
