Updated <head> section with essential meta tags and stylesheet link

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Quiz</title>
-      <link rel="stylesheet" href="assets/style/style.css" type="text/css">
-   </head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta 
+        name="description" 
+        content="Engage in a fun, interactive quiz to explore the World Economic Forum's initiatives and test your knowledge." 
+      />
+      <title>World Economic Forum Quiz</title>
+      <link rel="stylesheet" href="assets/style/style.css" />
+    </head>    
    <body>
       <!-- Logo -->
       <div class="logo-container">
